fixtures/cs-hash-01/good/argon2-hash-password.ts
import argon2 from "argon2";

export function hashPassword(password: string) {
	return argon2.hash(password);
}
