fixtures/cs-hash-01/bad/create-hash-sha1-param.ts
import { createHash } from "crypto";

export function authenticate(password: string) {
	return createHash("sha1").update(password).digest("hex");
}
